FILE (STRINGS "VERSION" BULLET_VERSION)

set (BULLET_PHYSICS_SOURCE_DIR ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Bullet3)

OPTION(BUILD_SHARED_LIBS "Use shared libraries" OFF)

OPTION(USE_SOFT_BODY_MULTI_BODY_DYNAMICS_WORLD "Use btSoftMultiBodyDynamicsWorld" ON)

OPTION(USE_DOUBLE_PRECISION "Use double precision"	OFF)

IF(NOT WIN32)
	SET(DL ${CMAKE_DL_LIBS})
	IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
		MESSAGE("Linux")
		SET(OSDEF -D_LINUX)
	ELSE(CMAKE_SYSTEM_NAME MATCHES "Linux")
		IF(APPLE)
			MESSAGE("Apple")
			SET(OSDEF -D_DARWIN)
		ELSE(APPLE)
			MESSAGE("BSD?")
			SET(OSDEF -D_BSD)
		ENDIF(APPLE)
	ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
ENDIF(NOT WIN32)

IF (USE_DOUBLE_PRECISION)
ADD_DEFINITIONS( -DBT_USE_DOUBLE_PRECISION)
SET( BULLET_DOUBLE_DEF "-DBT_USE_DOUBLE_PRECISION")
ENDIF (USE_DOUBLE_PRECISION)

IF (NOT USE_SOFT_BODY_MULTI_BODY_DYNAMICS_WORLD)
ADD_DEFINITIONS(-DSKIP_SOFT_BODY_MULTI_BODY_DYNAMICS_WORLD)
ENDIF ()

OPTION(BUILD_BULLET3 "Set when you want to build Bullet 3" OFF)

if (CMAKE_SYSTEM_NAME STREQUAL Android)
SET(BUILD_BULLET3 OFF)
endif()

if (CMAKE_SYSTEM_NAME STREQUAL Emscripten)
SET(BUILD_BULLET3 OFF)
endif()

if (CMAKE_SYSTEM_NAME STREQUAL WindowsStore)
SET(BUILD_BULLET3 OFF)
endif()

SUBDIRS(src)
